plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	alias(libs.plugins.dependency.management)
}

group = 'kakao'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// jwt
	implementation libs.jjwt.api
	implementation libs.jjwt.impl
	implementation libs.jjwt.jackson

	// Querydsl
	implementation(libs.querydsl.jpa) {
		artifact {
			classifier = "jakarta"
		}
	}
	annotationProcessor(libs.querydsl.apt) {
		artifact {
			classifier = "jakarta"
		}
	}
	annotationProcessor libs.jakarta.annotation
	annotationProcessor libs.jakarta.persistence

	// aws
	implementation libs.aws.s3
}

tasks.named('test') {
	useJUnitPlatform()
}
